add Luganda and Swahili

--- a/good-bye.html
+++ b/good-bye.html
@@ -4,4 +4,6 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
+  <li> Swahili: kwa heri, rafiki! </li>
+  <li> Luganda:  Weeraba, Mukwano! </li>
 </ul>
